fix hamburger menu on mobile

--- a/less/site.less
+++ b/less/site.less
@@ -284,7 +284,6 @@ ul.events-menu li {
   background: #fff;
   // display: inline-block;
   z-index: 1000; /* so the menu or its navicon stays above all content */
-  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   ul li {
     list-style-type: none;
